--- a/configs/apiserver.toml
+++ b/configs/apiserver.toml
@@ -1,3 +1,10 @@
 bind_addr = ":8080"
 log_level = "debug"
 log_file_path = "logs/api.log"
+[store]
+host = "localhost"
+port = "5432"
+username = "admin"
+user_password = "admin"
+db_name = "restapi_dev"
+sslmode = "disable"
