--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,4 +50,4 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Test
-        run: go test -v -race ./internal/app/apiserver/
+        run: go test -v -race ./internal/app/apiserver/ ./internal/app/model/
