--- a/configs/apiserver.toml
+++ b/configs/apiserver.toml
@@ -1,7 +1,9 @@
 bind_addr = ":8080"
 log_level = "debug"
 log_file_path = "logs/api.log"
-[store]
+
+
+[databaseconnector]
 host = "localhost"
 port = "5432"
 username = "admin"
